# llm-wiki-cookiecutter

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  cookiecutter.json  main.py  pyproject.toml
.agents/skills/wiki-audit/: SKILL.md
.claude/skills/wiki-ingest/: SKILL.md
.claude/skills/wiki-integrate/: SKILL.md
.gemini/skills/pdf/: SKILL.md
.gemini/skills/wiki-integrate/: SKILL.md
.gemini/skills/wiki-search/: SKILL.md
.gemini/skills/wiki-slides/: SKILL.md
docs/: generated-wiki-guide.md  obsidian.md  workflow-example.md
hooks/: post_gen_project.py  pre_gen_project.py
scripts/: sync_skills.py
skills/pdf/: SKILL.md
skills/pdf/scripts/: split_book.py
skills/wiki-audit/: SKILL.md
skills/wiki-ingest/: SKILL.md
skills/wiki-integrate/: SKILL.md
skills/wiki-search/: SKILL.md
skills/wiki-slides/: SKILL.md
templates/: book-chapter.md  book-summary.md  concept.md  dataset-table.md  synthesis.md
tests/: test_cookiecutter.py
{{cookiecutter.repo_slug}}/: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md
{{cookiecutter.repo_slug}}/docs/: obsidian.md  workflow-example.md
{{cookiecutter.repo_slug}}/skills/wiki-audit/: SKILL.md
{{cookiecutter.repo_slug}}/templates/: audit.md  book-chapter.md  book-summary.md  concept.md  dataset-table.md  dataset.md  decision.md  marp.md  meeting-notes.md  organization.md  paper.md  person.md  project.md  question.md  report.md  slide-deck.md  source.md  synthesis.md  webpage.md
{{cookiecutter.repo_slug}}/wiki/: index.md
{{cookiecutter.repo_slug}}/wiki_tools/: __init__.py  cli.py
(+10 files in other folders)
