[project]
name = "llm-wiki-cookiecutter"
version = "0.1.0"
description = "Cookiecutter template for portable, LLM-maintained markdown wikis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cookiecutter>=2.6.0",
]

[project.optional-dependencies]
pdf = [
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.0",
    "pillow>=10.4.0",
    "pypdf>=5.4.0",
    "pytesseract>=0.3.13",
    "reportlab>=4.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
